feat: agregar funcionalidad de búsqueda en listados de créditos y abonos